Bug 1520263 - Make `tabbrowser` wait reply event for F7 key before toggling caret browsing mode r=smaug

Unfortunately, it seems that `F7` key handling in `tabbrowser.js` cannot
replaced with using XUL `<key>` element because it works with
`ShortcutUtils.getSystemActionForEvent` for mapping `F7` is a toggle key of
caret browsing mode.

Therefore, this patch exposes some raw information of `WidgetEvent` related
to cross process event propagation and makes `tabbrowser.js` check it and
request reply event if it's required.

So, when a remote content has focus, `tabbrowser.js` will do nothing for both
`keydown` and `keypress` of `F7` key with original events, then, will request
a reply event if its default is not prevented.  Finally, reply `F7` keypress
event will toggle caret browsing mode if the event is fired and not consumed.

Differential Revision: https://phabricator.services.mozilla.com/D106591